[package]
name = "arch_papers"
description = "Genarate Arch Linux Wallpapers"
authors = ["Connor Slade <connor@connorcode.com>"]
repository = "https://github.com/Basicprogrammer10/ArchPapers/"
categories = ["command-line-utilities"]
exclude = ["img/"]
readme = "README.md"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
clap = { version = "4.1.13", features = ["cargo"] }
